--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,13 +26,13 @@ services:
       POSTGRES_PASSWORD: postgres
       REDIS_HOST: "redis"
     restart: always
-    #ports:
-    #  - "8000:8000"
+    ports:
+      - "8000:8000"
     depends_on:
       - db
       - redis
-    #command: >
-    #  sh -c "poetry run alembic upgrade head && poetry run uvicorn src:web_app --host 0.0.0.0 --port 8000"
+    command: >
+      sh -c "poetry run app/manage.py migrate && poetry run app/manage.py runserver 0.0.0.0:8000"
       
 volumes:
   postgres_data:
